--- a/src/index.html
+++ b/src/index.html
@@ -8,10 +8,9 @@
   </head>
   <body>
     <select class="breed-select"></select>
-    <!-- <span class="loader"></span> -->
-    <!-- <p class="loader">Loading data, please wait...</p>  -->
-
-    <span class="loader">Loading data, please wait...</span>
+    <p class="loader">
+      <span class="loadero"></span>Loading data, please wait...
+    </p>
     <p class="error">Oops! Something went wrong! Try reloading the page!</p>
     <div class="cat-info"></div>
 
